--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "talkkee",
+  "name": "baate_kare",
   "version": "1.0.0",
-  "description": "This is a real time chat app",
+  "description": "Baate Kare App",
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server"
@@ -10,8 +10,11 @@
   "author": "MEENAKSHI LODHI",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20",
     "socket.io": "^4.5.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
